welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: not found: value color
setCouleurBrosse(color.pink);
                 ^