welcome.lessons.welcome.loopfor.LoopCourse.scala.code
baisseBrosse();
setCouleurBrosse(color.pink);
while(!estFaceMur) { avance();
if(estFaceMur) { gauche();avance();}
}